<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 bernd32
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/fav_add_remove"
        android:title="@string/add_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/romanize"
        app:showAsAction="never"
        android:title="@string/romanize" />
    <item
        android:id="@+id/toolbar_furigana"
        android:icon="@drawable/baseline_g_translate_white_24"
        app:showAsAction="never"
        android:title="@string/translate">
    </item>
    <item
        android:id="@+id/toolbar_share"
        android:icon="@drawable/baseline_share_white_24"
        app:showAsAction="never"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/copy"
        app:showAsAction="never"
        android:title="@string/copy">
    </item>
    <item
        android:id="@+id/font_size"
        app:showAsAction="never"
        android:title="@string/font_size">
    </item>
    <item
        android:id="@+id/dark_theme"
        app:showAsAction="never"
        android:title="@string/dark_theme"
        android:checkable="true">
    </item>
    <item
        android:id="@+id/quit"
        app:showAsAction="never"
        android:title="@string/quit">
    </item>

</menu>